SF-Custom-Objects/salesforce_ant_46.0/sample/codepkg/objects/Application__c.object
<CustomObject>
    <description>Collects information related to CMS applications that utilize cloud resources.</description>
    <fields>
        <fullName>Application_Acronym__c</fullName>
        <label>Application Acronym</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Cloud_Resource_Cost_Ceiling__c</fullName>
        <description>The current total cost of the latest approved cloud resource request</description>
        <label>Current Cloud Resource Cost Ceiling</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_ADO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary application development organization organization of the application.</description>
        <label>Primary ADO</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates an IT application with the project name/number on contract.</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Application</label>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>